--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -1,4 +1,4 @@
-#summary This page presents "PANDA-AEmilia" that is a software tool for Performance Antipatterns aNd feeDback on software Architectures (specified with the AEmilia Description Language).
+#summary This page presents "PANDA-AEmilia": Performance Antipatterns aNd feeDback on software Architectures, specified with the AEmilia Description Language.
 
 = Introduction =
 
