--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -11,4 +11,4 @@ This project aims at automating the detection of software performance antipatter
 = Details =
 
 The content of this project is here reported:
-  * The specification of a metamodel, based on the Performance Antipatterns Modeling Language (_PAML_), containing the architectural model elements of AEmilia: *PAML[AEmilia]*
+  * The specification of a metamodel, based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia: *PAML-AEmilia*
