Edited wiki page Main through web user interface.

--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -6,7 +6,7 @@ The problem of interpreting the results of performance analysis is quite critica
 
 PANDA is a framework for addressing the results interpretation and the feedback generation problems by means of performance antipatterns, that are recurring solutions to common mistakes (i.e. bad practices) in the software development. Such antipatterns can play a key role in the software performance domain, since they can be used in the search of performance problems as well as in the formulation of their solutions in terms of architectural alternatives.
 
-This project aims at automating the detection of software performance antipatterns in the AEmilia Description Language.
+*_This project aims at enabling the usage of software performance antipatterns in the AEmilia Description Language._*
 
 = Details =
 
