Edited wiki page AEmiliaMetamodel through web user interface.

--- a/wiki/AEmiliaMetamodel.wiki
+++ b/wiki/AEmiliaMetamodel.wiki
@@ -13,6 +13,9 @@ The AEmilia metamodel (mmAEmilia.ecore) is composed by a set of meta classes and
 - *Behavior*: it contains a set of behavioral equations, their actions and the rates (exponential, immediate, passive) that can be specified in the AEmilia ADL.
 
 
+To code the constraints imposed by the AEmilia ADL (e.g. each local interaction must be involved in at least one attachment), we implemented a set of OCL rules that allow us to validate the AEmilia specification and its corresponding model.
+
+
 = Details =
 
 The AEmilia metamodel: core elements and inner packages.
