--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -16,7 +16,7 @@ The content of this project is here reported:
 
   * The specification of a metamodel, based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia, please refer to the Dowloads/metamodel.zip.
 
-  * The specification of a Text-to-Model Transformation that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to the Dowloads/text2ModelTransf.zip.
+  * The specification of Text-to-Model Transformation Rules that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to the Dowloads/text2ModelTransf.zip.
 
   * The detection tool that allows the detection of software performance antipatterns in the AEmilia model, please refer to the Dowloads/detectionTool.zip.
 
