--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -18,7 +18,7 @@ The content of this project is here reported:
 
   * The specification of Text-to-Model Transformation Rules that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to the Dowloads/text2ModelTransf.zip.
 
-  * The detection tool that allows the detection of software performance antipatterns in the AEmilia model, please refer to the Dowloads/detectionTool.zip.
+  * The detection tool that allows the detection of software performance antipatterns in the AEmilia model by means of OCL rules, please refer to the Dowloads/detectionTool.zip.
 
   * The user guide that explains how-to-use metamodel, text2ModelTransf, and detectionTool sources, please refer to the Dowloads/panda-aemilia-userGuide.pdf.
 
