--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -4,15 +4,15 @@
 
 The content of this project is here reported:
 
-  * The specification of a metamodel, based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia, please refer to the Dowloads/metamodel.zip.
+  * The specification of a metamodel ([http://code.google.com/p/panda-aemilia/wiki/AEmiliaMetamodel see more details]), based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia, please refer to Downloads/metamodel.zip.
 
-  * The specification of Text-to-Model Transformation Rules that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to the Dowloads/text2ModelTransf.zip.
+  * The specification of Text-to-Model Transformation Rules that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to Downloads/text2ModelTransf.zip.
 
-  * The detection tool that allows the detection of software performance antipatterns in the AEmilia model by means of OCL rules, please refer to the Dowloads/detectionTool.zip.
+  * The detection tool that allows the detection of software performance antipatterns in the AEmilia model by means of OCL rules, please refer to Downloads/detectionTool.zip.
 
-  * The user guide that explains how-to-use metamodel, text2ModelTransf, and detectionTool sources, please refer to the Dowloads/PANDA-AEmilia-userGuide.pdf.
+  * The user guide that explains how-to-use metamodel, text2ModelTransf, and detectionTool sources, please refer to Downloads/PANDA-AEmilia-userGuide.pdf.
 
-  * PANDA-AEmilia at work on a case study: Bus On Air, i.e. a system aimed at developing a set of services for public transportation targeting both the end-users (passengers) and the suppliers (transportation agencies), please refer to the Dowloads/BoA-caseStudy.zip.
+  * PANDA-AEmilia at work on a case study: Bus On Air, i.e. a system aimed at developing a set of services for public transportation targeting both the end-users (passengers) and the suppliers (transportation agencies), please refer to Downloads/BoA-caseStudy.zip.
 
 
 
