--- a/wiki/Main.wiki
+++ b/wiki/Main.wiki
@@ -4,7 +4,7 @@
 
 The content of this project is here reported:
 
-  * The specification of a metamodel ([http://code.google.com/p/panda-aemilia/wiki/AEmiliaMetamodel see more details]), based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia, please refer to Downloads/metamodel.zip.
+  * The specification of a metamodel ([http://code.google.com/p/panda-aemilia/wiki/AEmiliaMetamodel see more details]), based on the _Performance Antipatterns Modeling Language (PAML)_, containing the architectural model elements of AEmilia, please refer to [http://code.google.com/p/panda-aemilia/downloads/detail?name=metamodel.zip&can=2&q=#makechanges Downloads/metamodel.zip].
 
   * The specification of Text-to-Model Transformation Rules that allows the transformation of an AEmilia specification (file.aem) into an AEmilia model, please refer to Downloads/text2ModelTransf.zip.
 
