Edited wiki page BoAcaseStudy through web user interface.

--- a/wiki/BoAcaseStudy.wiki
+++ b/wiki/BoAcaseStudy.wiki
@@ -9,7 +9,7 @@ Bus on Air (BoA) is a system aimed at developing a set of services for public tr
 
 The complete AEmilia architectural specification of the BoA system
 (BoA.aem) along with its performance specification (BoA.rew) and the
-performance results (BoA.val) have been reported in Downloads/BoA-caseStudy.zip.
+performance results (BoA.val) have been reported in [http://code.google.com/p/panda-aemilia/downloads/detail?name=BoA-caseStudy.zip&can=2&q=#makechanges Downloads/BoA-caseStudy.zip].
 
 BoA - solution of the Pipe and Filter Architectures antipattern.
 
