--- a/wiki/BoAcaseStudy.wiki
+++ b/wiki/BoAcaseStudy.wiki
@@ -16,12 +16,20 @@ The solution of antipatterns gives rise to new AEmilia architectural specificati
 
 BoA - solution of the Pipe and Filter Architectures antipattern.
 
+The behavior of Server_Type is modified, since the retrieval of data from
+servers to the database is conditioned by the presence of such data in the cache.
+
 http://www.di.univaq.it/catia.trubiani/download/mmAEmilia/boa-pipeAndFilter.png
 
 BoA - solution of the Extensive Processing antipattern.
 
+A further instance of Balancer_Type (LBA, LBB: Balancer Type) has been added
+to privilege the processing of fast requests despite slower ones.
+
 http://www.di.univaq.it/catia.trubiani/download/mmAEmilia/boa-extensiveProcessing.png
 
 BoA - solution of the Traffic Jam antipattern.
+
+The frequency of the database disk access is modified of 50%, from 150 MBps to 300 MBps, hence its processing power (data_fetch_rate) has been increased from 36.585 to 55. 
 
 http://www.di.univaq.it/catia.trubiani/download/mmAEmilia/boa-trafficJam.png
