--- a/wiki/BoAcaseStudy.wiki
+++ b/wiki/BoAcaseStudy.wiki
@@ -23,7 +23,7 @@ http://www.di.univaq.it/catia.trubiani/download/mmAEmilia/boa-pipeAndFilter.png
 
 BoA - solution of the Extensive Processing antipattern.
 
-A further instance of Balancer_Type (LBA, LBB: Balancer Type) has been added
+A further instance of Balancer_Type (LBA, LBB: Balancer_Type) has been added
 to privilege the processing of fast requests despite slower ones.
 
 http://www.di.univaq.it/catia.trubiani/download/mmAEmilia/boa-extensiveProcessing.png
